# multiscale-tda-geomorphology

./: .dockerignore  .editorconfig  .env  .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  Dockerfile  GEMINI.md  LICENSE  Makefile  Multiscale TDA Geomorphology.aprx  Multiscale TDA Geomorphology.atbx  QUICK_START.md  README.md  config.yml  diagnose_aoi.py  docker-compose.gpu.yml  docker-compose.yml  entrypoint.sh  environment.yml  pyproject.toml  startup.sh  test_imports.py  verify_structure.py
.claude/: settings.local.json
.devcontainer/: devcontainer.json
config/: jupyter_server_config.py
docs/: 20251022_1255_compass_artifact_wf-fdb3ee0b-51e6-47b7-a09d-b8d45ef1d180_text_markdown.md  20251030-compass_artifact_wf-57592f74-3e2f-4ba4-a23d-d5c216a24a97_text_markdown.md  20251030_compass_artifact_wf-d5dfd51d-bc10-4b29-aa52-afb072f30ef5_text_markdown.md  Dynamic Parallel DEM Processing.md  Executive_Summary_1Page.md  Frontier Research Question Formulation.md  Geomorphic Analysis Framework Development.md  Geomorphology TDA Metrics Literature Review.md  Geomorphometry Methods and Metrics Discussion.md  Geomorphometry Regression Target Identification.md  Literature Review of Optimal Regression Targets.md  Prioritized_Reading_List.md  Project Proposal Fall 2025-Michael-PC.md  Project Proposal Fall 2025.md  Project_Proposal_MultiPlanet_TDA_Fall_2025.md  Proposal_Comparison_BeforeAfter.md  Proposal_Revisions_Summary.md  Research Plan for SOC Prediction.md  SETUP_GPU.md  SETUP_GUIDE.md  TEST_GPU.md  TEST_SETUP.md  Thesis_Revision_Recommendations.md  project_proposal.md  (+7 more)
(+127 files in other folders)
